--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,6 @@ body {
   background-color: var(--body-bg-color);
 }
 
-.heading-text {
-  color: var(--card-text-color);
-}
-
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -21,15 +17,15 @@ body {
 
 .highlighted-text {
   font-weight: 700;
-  font-size: 1.2rem;
-  padding: 0.3rem 0rem;
+  font-size: 1.1rem;
+  padding: 0.2rem 0rem;
   display: block;
 }
 
 .card {
   border-radius: 0.7rem;
-  margin-right: 4rem;
-  margin-top: 4rem;
+  margin-right: 2rem;
+  margin-top: 2rem;
   background-color: var(--card-bg-color);
 }
 
@@ -44,7 +40,7 @@ body {
 }
 
 .overlay-text2 {
-  bottom: 5.1rem;
+  bottom: 5rem;
 }
 
 .card-overlay-img {
@@ -53,10 +49,18 @@ body {
   border-radius: 0.7rem;
 }
 
+.play-btn {
+  position: relative;
+  bottom: 0.5rem;
+  width: 14rem;
+  background-color: var(--body-bg-color);
+  color: var(--card-text-color);
+}
+
 .card-overlay-textarea {
   color: var(--card-text-color);
   font-size: 1.1rem;
-  line-height: 1.6rem;
+  line-height: 1.5rem;
 }
 
 .heading-text {
