Fix : Used variables for colors

--- a/Result-page/result.css
+++ b/Result-page/result.css
@@ -1,6 +1,6 @@
 .main-wrapper {
-    background-color: rgb(12, 12, 12);
-    color: #a3a3a3;
+    background-color: var(--card-bg-color);
+    color: var(--card-text-color);
     width: 50rem;
     height: 32rem;
     margin: 2rem auto;
@@ -34,7 +34,7 @@
 }
 
 .alert-options {
-    background-color: rgb(37, 34, 34);
+    background-color: var(--body-bg-color);
 }
 
 .result {
