--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,14 @@ body {
   border-radius: 0.7rem;
 }
 
+.play-btn {
+  position: relative;
+  bottom: 0.5rem;
+  width: 14rem;
+  background-color: var(--body-bg-color);
+  color: var(--card-text-color);
+}
+
 .card-overlay-textarea {
   color: var(--card-text-color);
   font-size: 1.1rem;
