--- a/styles.css
+++ b/styles.css
@@ -50,11 +50,9 @@ body {
 }
 
 .play-btn {
-  position: relative;
-  bottom: 0.5rem;
-  width: 14rem;
-  background-color: var(--body-bg-color);
+  background-color: var(--card-bg-color);
   color: var(--card-text-color);
+  text-decoration: none;
 }
 
 .card-overlay-textarea {
